crates/franken-engine/tests/snapshots/golden_fuzz_regression__parser_boundary_case_00.snap
---
source: tests/golden_fuzz_regression.rs
expression: actual
---
{
  "input_hex": "",
  "goal": "skipped",
  "options": {
    "mode": "skipped",
    "max_source_bytes": 0,
    "max_token_count": 0,
    "max_recursion_depth": 0
  },
  "parse_succeeded": false,
  "result_hash": null,
  "error_hash": null,
  "event_ir_hash": "skipped",
  "event_count": 0,
  "event_types": [],
  "deterministic": true
}
