crates/franken-engine/tests/snapshots/golden_fuzz_regression__parser_boundary_max_recursion.snap
---
source: tests/golden_fuzz_regression.rs
expression: actual
---
{
  "input_hex": "00ffff28282828",
  "goal": "script",
  "options": {
    "mode": "scalar_reference",
    "max_source_bytes": 8192,
    "max_token_count": 271,
    "max_recursion_depth": 71
  },
  "parse_succeeded": true,
  "result_hash": "sha256:[HASH]",
  "error_hash": null,
  "event_ir_hash": "sha256:[HASH]",
  "event_count": 4,
  "event_types": [
    "parse_started",
    "statement_parsed",
    "statement_parsed",
    "parse_completed"
  ],
  "deterministic": true
}
