crates/franken-engine/tests/snapshots/golden_fuzz_regression__parser_boundary_minimal_module.snap
---
source: tests/golden_fuzz_regression.rs
expression: actual
---
{
  "input_hex": "01000000",
  "goal": "module",
  "options": {
    "mode": "scalar_reference",
    "max_source_bytes": 8192,
    "max_token_count": 16,
    "max_recursion_depth": 8
  },
  "parse_succeeded": true,
  "result_hash": "sha256:[HASH]",
  "error_hash": null,
  "event_ir_hash": "sha256:[HASH]",
  "event_count": 5,
  "event_types": [
    "parse_started",
    "statement_parsed",
    "statement_parsed",
    "statement_parsed",
    "parse_completed"
  ],
  "deterministic": true
}
